# transieve

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  search.json
.github/workflows/: ci.yml  docs.yml
docs/: .gitignore  _quarto.yml  index.qmd
docs/tutorials/: gp_visualisation.py  plotting.py  quickstart.py  retrievability_synthetic_demo.py
reference/: LightCurve.html  SimulatedLightCurve.html  gp.BayesianDetectionResult.html  gp.ExpGPFamily.html  gp.FrequentistDetectionResult.html  gp.GPFamily.html  gp.GPStabilityMap.html  gp.MatchedFilter.html  gp.MultiProfileBayesianDetectionResult.html  gp.MultiProfileFrequentistDetectionResult.html  gp.SHOGPFamily.html  gp.SearchProfile.html  gp.TemplateBank.html  gp.TransitVettingPolicy.html  gp.VettingResult.html  gp.evaluate_bayesian_detection.html  gp.evaluate_frequentist_detection.html  gp.plot_covariance_matrix.html  gp.scan_gp_stability_map.html  index.html
site_libs/bootstrap/: bootstrap-43072310d50789006c8f6cac49e0b8c5.min.css  bootstrap-dark-24230e5ff60161dd0ba0cde0af28f5a7.min.css
src/transieve/: __init__.py  bin.py  lightcurve.py  simulation.py  snr.py  transit.py  utils.py
src/transieve/gp/: __init__.py  detection.py  fit.py  integration.py  match.py  policy.py  recovery.py  stability.py  viz.py
tests/: conftest.py  test_fit.py  test_match.py  test_policy.py  test_recovery.py  test_simulation.py  test_snr.py  test_transit.py  test_utils.py  test_wavelet.py
tutorials/: gp_visualisation.html  quickstart.html  retrievability_synthetic_demo.html
(+4 files in other folders)
